--- a/08_Carousel元件.html
+++ b/08_Carousel元件.html
@@ -10,8 +10,7 @@
         align-items: center;
         border: 1px solid black;
       }
-      .carousel {
-        background-color: #adadad;
+      .carouselBox {
         border: 1px solid black;
         width: 600px;
         height: 300px;
@@ -29,6 +28,11 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+      }
+      .carousel-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     </style>
   </head>
@@ -63,12 +67,40 @@
       ];
 
       const carouselBox = document.querySelector(".carouselBox");
-      for (let i = 0; i < data.length; i++) {
-        console.log(data[i].url);
-        const d = document.createElement("div");
-        const p = document.createElement("img");
+      const btnNext = document.querySelector(".btn-next");
+      const btnBack = document.querySelector(".btn-back");
+      const p = document.createElement("img");
+
+      let i = 0;
+      p.src = data[i].url;
+      p.classList.add("carousel-img");
+      carouselBox.append(p);
+
+      btnNext.addEventListener("click", () => {
+        clearInterval(autoPlay);
+        i++;
+        if (i >= data.length) {
+          i = 0;
+        }
         p.src = data[i].url;
-      }
+      });
+
+      btnBack.addEventListener("click", () => {
+        clearInterval(autoPlay);
+        i--;
+        if (i < 0) {
+          i = 4;
+        }
+        p.src = data[i].url;
+      });
+
+      const autoPlay = setInterval(() => {
+        i++;
+        if (i >= data.length) {
+          i = 0;
+        }
+        p.src = data[i].url;
+      }, 3000);
     </script>
   </body>
 </html>
